--- a/caseStudyWP/05-chap5.Rmd
+++ b/caseStudyWP/05-chap5.Rmd
@@ -9,42 +9,43 @@ output:
 
 ## CONTEXT
 
--SMU description
 The Inside South Coast Chum Stock Management Unit (SMU) includes seven Conservation Units (CU) of chum salmon from rivers that drain into Johnstone Strait and the Salish Sea along the mainland of British Columbia and the east coast of Vancouver Island (Figure \@ref(fig:map-chum)). This area includes deep fjords, glaciers, large rivers, and small coastal streams.
+
+`@holt_evaluating_2018` used these CUs to compare benchmarks from stock-recruit relationships and benchmarks based on abundance, as a case study for chum populations with limited data. They showed that benchmarks based on a percentile of abundances can be comparable to those based on stock-recruit relationships when productivity is relatively high and harvest is relatively low. In other cases, percentile benchmarks may be inappropriate because they do not account for shifting baselines. 
+
+We chose Inside South Coast Chum as a case study because:
+
+- Previous work on comparing stock-recruit and percentile benchmarks to these CUs
+- It is an example of a data-limited SMU, with:
+  - incomplete escapement time series (not all streams counted each year, some CUs have no counts in some years)
+  - recruits estimated using harvest, age, and escapement data, allowing stock-recruit modelling
+  - no data on marine survival (although there are some scale/growth data `@debertin_marine_2017`)
+- Relatively long time series (1953-2018)
+- Large area with many diverse watersheds, flow regimes, and ocean entry locations, contrasting with Interior Fraser Coho
+- High contrast in abundances levels among CUs
+- Low correlation in abundance levels among CUs over time
+
 
 ```{r map-chum, fig.cap="The seven Conservation Units that make up the Inside South Coast Chum Stock Management unit (not including Lower Fraser and Fraser Canyon Conservation Units). Numbers indicate the Fishery Management Areas associated with these populations."}
 knitr::include_graphics(here::here("figure/fig_chum_CU_map.png"))
 ```
 
-
--	Which used? 
-
--	Unique attributes of the case study (e.g., draw from Holt et al. CSAS paper to highlight previous data-limited work on percentile benchmarks)
-
-
 ## DATA
 
--	Sources
-
-
--	Caveats
-
-### Subsets of data used
-
-
-We used essentially the same data used in `@holt_evaluating_2018`, updated with escapement data up to 2018. `@van_will_inner_2014` provides more details on the data sources, infilling procedures and run reconstruction, which were reproduced for this study and described below.
+We used essentially the same data used in `@holt_evaluating_2018`, updated with escapement data up to 2018. `@van_will_inner_2014` provides more details on the data sources, infilling procedures and run reconstruction, which were reproduced for this study and described below. We did not include the Lower Fraser or Fraser Canyon chum CUs. 
 
 ### Spawner counts / Escapement
 
-Escapement data were downloaded from the NUSEDS database. Escapement data record the estimates of total spawners by stream and CU for each year.  Biologists from Fisheries and Oceans Canada and First Nations including ... (Island Marine Aquatic Working Group) *\textcolor{cyan}{LW: which ones?}* generate these data by walking streams and counting fish, and using fences or weirs on some rivers. If there was more than one count for a stream in a given year, total escapement was estimated using the area under the curve (AUC) method.
+Most of the escapement data used comes from the NUSEDS database (a small amount from Lower Fraser Stock Assessment for Areas 28 and 29, FSC in-river catch from some First Nations and enhanced escapement from SEP) *textcolor{cyan}{LW: probably unneccesary detail}*. Escapement data record the estimates of total spawners by stream and CU for each year.  Biologists from Fisheries and Oceans Canada and First Nations including ... (Island Marine Aquatic Working Group) *\textcolor{cyan}{LW: which ones?}* generate these data by walking streams and counting fish, and using fences or weirs on some rivers. If there was more than one count for a stream in a given year, total escapement was estimated using the area under the curve (AUC) method.
 
-### Fishery harvest
+### Fishery harvest, genetics, and age
 
-The number of chum caught in fisheries in the Inside South Coast area were taken from the DFO Clockwork Database, which includes the DFO Fishery Operating System and Sales slip databases and Genetic Stock Identification data. 
+The number of chum caught in fisheries in the Inside South Coast area were taken from the DFO Clockwork Database, which includes the DFO Fishery Operating System and Sales slip databases and Genetic Stock Identification data. Age distributions for each year were taken from the Johnstone Strait fishery aggregate, as age data for specific CUs or streams was not available. 
 
 ### Data treatment
 
--- Hatchery stocks removed from data set (provide a few details)
+ 
+
 -- Escapement data: Infilling of escapement data: (i) summarize infilling methods (ii) show plot of infilled escapement series for all 7 CUs (iii) describe that we are only using 5 CUs without CU infilling for anlayses
 -- Recruitment data: use of run reconstruction model
 
@@ -59,7 +60,6 @@ The steps for preparing the data for analysis were:
 #### Infilling of spawner escapement data 
 
 #### Run reconstruction to estimate recruitment
-
 
 ## METHODS
 
